--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,10 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     implementation(group:"org.springframework.boot", name:"spring-boot-starter-data-jpa", version:springBootVersion)
     implementation(group:"com.h2database", name:"h2", version:"1.4.200")
+
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.security:spring-security-test'
+
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
